# popets-2026.1-ephemeral-defs-paper-artifacts

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  download_datas.sh  test-derive-paper-eph-defenses.sh
crates/maybenot-cli/: Cargo.toml
crates/maybenot-cli/src/: combo.rs  config.rs  derive.rs  eval.rs  fixed.rs  main.rs  print.rs  search.rs  sim.rs  tune_rng.rs
crates/maybenot-gen/: Cargo.toml
crates/maybenot-gen/benches/: rng.rs
crates/maybenot-gen/src/: constraints.rs  dealer.rs  defense.rs  lib.rs  random.rs
crates/maybenot-gen/src/environment/: mod.rs  traces.rs
crates/maybenot-machines/: Cargo.toml
crates/maybenot-machines/src/: break_pad.rs  front.rs  interspace.rs  lib.rs  regulator.rs  scrambler.rs  tamaraw.rs
crates/mbnt-rustbindings/: Cargo.toml  README.md  pyproject.toml
crates/mbnt-rustbindings/src/: dutils.rs  lib.rs  overhead.rs
crates/mbnt-rustbindings/src/mbnt/: __init__.py  __init__.pyi  mbnt.pyi
def-ml/: README.md  convert_data.py  defence_builder.py  gong-surakav_rename.sh  main.py  pyproject.toml
def-ml/.data/bigenough/: xv_splits-10-page_label.csv  xv_splits-5-page_label.csv
def-ml/.data/gong-surakav/: xv_splits-10-page_label.csv  xv_splits-5-page_label.csv
def-ml/config/: df-multi.yaml  df.yaml  laserbeak.yaml  laserbeak_wo_attention.yaml  main.yaml  march.yaml  rf.yaml
def-ml/config/dataset/: base.yaml  bigenough.yaml  gong-surakav.yaml
def-ml/config/defence/: breakpad.yaml  ephemeral-block-blocking-heavy.yaml  ephemeral-block-bottle-sc0.5.yaml  ephemeral-block-bottle-sc0.75.yaml  ephemeral-block-default.yaml  ephemeral-block-padding-heavy.yaml  ephemeral-pad-bottle-sc0.5.yaml  ephemeral-pad-inf-sc0.75.yaml  front-bottleneck.yaml  front-infinite.yaml  interspace.yaml  no_defence.yaml  regulator-bottleneck.yaml  regulator-infinite.yaml  tamaraw-bottleneck.yaml  tamaraw-infinite.yaml
def-ml/config/loss/: crossentropy.yaml
def-ml/config/lr_scheduler/: cosine.yaml  no-scheduling.yaml  plateau.yaml  rfscheduler.yaml
def-ml/config/misc/: default.yaml
def-ml/config/model/: df-multi.yaml  df-orig.yaml  df-tiktok.yaml  laserbeak.yaml  laserbeak_wo_attention.yaml  march.yaml  rf.yaml
def-ml/config/network/: bottleneck.yaml  infinite.yaml
def-ml/config/optimizer/: adam.yaml  adamax.yaml  adamw.yaml
def-ml/config/train/: augmentation.yaml  default.yaml  fixed-epochs.yaml
def-ml/def_ml/: config.py
def-ml/def_ml/data/: assets.py  conversion.py  utils.py  wf_dataset.py
def-ml/def_ml/defences/: base.py  breakpad.py  fixed_machines.py  front.py  interspace.py  maybenot.py  naive.py  regulator.py  tamaraw.py  utils.py
def-ml/def_ml/logging/: logger.py  utils.py
def-ml/def_ml/metrics/: clf_metrics.py  defence_netwk_metrics.py  tests.py
def-ml/def_ml/model_eval/: evaluate.py
def-ml/def_ml/models/: df.py  laserbeak.py  march.py  models.py  rf.py  utils.py
def-ml/def_ml/tools/: cuda_tools.py  mlf_delete_run_id.py  mlflow_utils.py  rng_samplers.py
def-ml/def_ml/trace/: features.py  params.py  tests.py  transforms.py
def-ml/def_ml/train/: loops.py
def-ml/def_ml/visualize/: pltstyle.mplstyle  style.py
def-ml/scripts/: cross_attack_defense_heatmap.py  defense_cost.py  defense_cost.sh  defense_lists.sh  name_maps.py  overview.sh  overview_inftrain.sh  overview_table.py
experiments/circuit-fingerprinting/cf-tunable-def/: cf-tunable-def.py  cf-tune-fig.csv
experiments/circuit-fingerprinting/cf-tuning-phases-plot/: cf-tuning-phases.py  data.csv
experiments/circuit-fingerprinting/combo/: cf-tune-10-combos.csv  combo-10.toml  combo.sh
experiments/circuit-fingerprinting/dataset/: README.md  onionfp-files-to-kinds.py
experiments/circuit-fingerprinting/parameter-tuning/0/: cf-tune-0.csv  cf.toml
experiments/circuit-fingerprinting/wf-as-cf-def/: README.md  combo-10.toml  merged.csv  plot.py  run.sh  wf-block-inf-for-cf.csv
experiments/video-fingerprinting/: accuracy.py  overhead-eph.py  overhead-scrambler.py
experiments/video-fingerprinting/accuracy/: eph-blocking-inf-bw1.toml  eph-blocking-inf-bw2.toml  eph-blocking-inf-bw4.toml  eph-blocking-inf-bw8.toml  eph-blocking-inf-default.toml  eph-blocking-inf.csv  eph-blocking-inf.sh  scrambler-inf-bw1.toml  scrambler-inf-bw2.toml  scrambler-inf-bw4.toml  scrambler-inf-bw8.toml  scrambler-inf-default.toml  scrambler-inf.csv  scrambler-inf.sh  undefended-bw1.toml  undefended-bw2.toml  undefended-bw4.toml  undefended-bw8.toml  undefended-default.toml  undefended.csv  undefended.sh
experiments/video-fingerprinting/overhead/: eph-blocking-inf-bw1.toml  eph-blocking-inf-bw2.toml  eph-blocking-inf-bw4.toml  eph-blocking-inf-bw8.toml  eph-blocking-inf-default.toml  eph-blocking-inf-oh.csv  eph.sh  scrambler-inf-bw1.toml  scrambler-inf-bw2.toml  scrambler-inf-bw4.toml  scrambler-inf-bw8.toml  scrambler-inf-default.toml  scrambler-inf-oh.csv  scrambler.sh
experiments/wf-inf-train/: cost_curve_formatted.csv  plot_cost_accuracy_laserbeak.py
experiments/wf-overview-table/eph-blocking/: bottleneck.sh  bottleneck.toml  eph-blocking-bottle.csv  eph-blocking-inf.csv  infinite.sh  infinite.toml
experiments/wf-overview-table/eph-padding/: bottleneck.sh  bottleneck.toml  eph-padding-bottle.csv  eph-padding-inf.csv  infinite.sh  infinite.toml
experiments/wf-overview-table/related-fixed-rate/: small-bottleneck.toml  small-normal.toml
experiments/wf-overview-table/related-randomization/: bottleneck.toml  infinite.toml
scripts/: df.py  rf.py  vdf.py  vrf.py
scripts/cross-validation/: 10.txt
(+64 files in other folders)
