[project]
name = "eph-wf"
version = "1.0"
description = "Scipts to produce results for our Ephemeral defenses paper."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "laserbeak",
    "mbnt-rustbindings",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.0",
    "maturin>=1.8.1",
    "mlflow>=2.20.0,<3.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "seaborn>=0.13.2",
    "tables>=3.10.2",
    "torch>=2.5.1",
    "torchtune>=0.5.0",
    "tqdm>=4.67.1",
    "pyarrow>=4.0.0",
    "datasets==3.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts", "def_ml"]
include = ["*.py"]

[tool.uv.sources]
mbnt-rustbindings = { path = "../crates/mbnt-rustbindings" } # For Eph. use tag: v0.4
laserbeak = { git = "https://github.com/topiko/laserbeak.git", tag="v0.0" } # For Eph. use tag: v0.0

# For maybenot use commit: c41b3bf590e4a88e44744d75f56de8d1a4f1d1d7
# For maybenot-gen use commit: 5ed0138c7bc0d5c68c53628e56c8ccd2e6040ff8
