[package]
name = "maybenot-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "maybenot"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
console = "0.15.8"
env_logger = "0.11.3"
indicatif = { version = "0.17.8", features = ["rayon"] }
# https://docs.rs/log/latest/log/#compile-time-filters
log = { version = "0.4.21", features = ["release_max_level_info"] }
rayon = "1.10.0"
serde = "1.0.202"
toml = "0.8.13"
maybenot = "=2.1.0"
maybenot-simulator = "=2.1.0"
maybenot-gen = { version = "=0.1.0", path = "../../crates/maybenot-gen" }
maybenot-machines = { version = "=0.1.0", path = "../../crates/maybenot-machines" }
anyhow = "1.0.86"
serde_json = "1.0.117"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
num_cpus = "1.16.0"
rand_seeder = "0.2.3"
num-integer = "0.1.46"
num-bigint = "0.4.6"
num-traits = "0.2.19"
