[package]
name = "maybenot-gen"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.83"
criterion = "0.5.1"
enum-map = "2.7.3"
maybenot = "2.1.0"
maybenot-simulator = "2.1.0"
petgraph = "0.6.4"
rand = "0.8.5"
rand_core = "0.6.4"
rand_xoshiro = "0.6.0"
serde = "1.0.200"
serde_json = "1.0.139"
sha256 = "1.5.0"

[[bench]]
name = "rng"
harness = false
