[package]
name = "mbnt-rustbindings"
version = "0.1.0"
edition = "2021"

[lib]
name = "mbnt"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py39" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.9
pyo3 = { version = "0.23.1", features = ["extension-module", "abi3-py39"] }
numpy = "0.23"
# maybenot-cli = { path = "../../crates/maybenot-cli"}
maybenot-machines = { path = "../../crates/maybenot-machines"}
maybenot-gen = { path = "../../crates/maybenot-gen"}
maybenot-simulator = "2.1.0"
maybenot = "2.1.0"
itertools = "0.11"
rayon = "1.10.0"
log = "0.4.26"
indicatif = "0.17.11"
serde = "1.0.218"
anyhow = "1.0.96"
serde_json = "1.0.139"
rand_seeder = "0.2.3"
rand_xoshiro = "0.6.0"
rand = "0.9.0"
